fix: 메인페이지 질문 버튼 우선순위 변경 z-index 추가

--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -8,6 +8,8 @@
 }
 
 .top-area {
+  position: relative;
+  z-index: 3;
   width: 100%;
   display: flex;
   justify-content: flex-end;
@@ -23,10 +25,10 @@
 
 .papercup-image {
   position: absolute;
-  bottom: 0;
+  bottom: -20px;
   left: 50%;
   transform: translateX(-50%);
-  width: 90%;
+  width: 80%;
   z-index: 1;
   pointer-events: none;
 }
